Added pink background for styling

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 body {
-  background-color: bisque;
+  background-color: #ffaed7;
   padding: 1em;
   font-family: "Roboto", sans-serif;
 }
