color for h1 title

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ h1 {
   font-family: "Roundabout";
   font-size: 3em;
   font-weight: bold;
-  color: bisque;
+  color: #af03ca;
   -webkit-text-stroke-color: black;
   -webkit-text-stroke-width: 1px;
 }
