added font family in body of project gallery

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 body {
   background-color: #ffaed7;
   padding: 1em;
-  font-family: "Cornleaves", regular;
+  font-family: "Patrick Hand", cursive;
 }
 
 a,
