--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ h1 {
 p,
 h4 {
   margin: 0.5em 0;
+  margin-bottom: 10%;
 }
 .week-section {
   display: flex;
@@ -58,6 +59,7 @@ h4 {
   display: flex;
   flex-direction: column;
   width: 100%;
+  overflow: hidden;
 }
 .week-header {
   width: 100%;
@@ -79,6 +81,11 @@ h4 {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  transition: transform 600ms ease-out;
+}
+
+.project-image:hover {
+  transform: scale(1.15);
 }
 
 .project-image-container {
