--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,9 @@ h4 {
   width: 100%;
   overflow: hidden;
 }
+.project-article:hover {
+  background-color: #84fab0;
+}
 .week-header {
   width: 100%;
   display: flex;
