changed scale on transform effect

--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,8 @@ h4 {
 }
 
 .project-image:hover {
-  transform: scale(1.15);
+  /* transform: scale(1.15); */
+  transform: scale(1.2);
 }
 
 .project-image-container {
