--- a/css/style.css
+++ b/css/style.css
@@ -110,4 +110,12 @@ h4 {
     max-width: 280px;
     max-height: 195px;
   }
+
+  .fac-logo {
+    display: block;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 20%;
+  }
 }
