--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ a:visited {
   transition: 1s ease-out;
   background-color: #5e0034;
   border-radius: 100%;
+  border: 2rem solid#84fab0;
 }
 .app-header {
   display: flex;
