changed font to fix error

--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ a:visited {
 h1 {
   padding: 2rem;
   text-align: center;
-  font-family: "Roundabout";
+  font-family: "Wash Your Hand";
   font-size: 3em;
   font-weight: bold;
   color: #94bbe9;
