--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ a:visited {
 h1 {
   padding: 2rem;
   text-align: center;
-  font-family: "Wash Your Hand";
+  font-family: "Wash Your Hand", regular, cursive;
   font-size: 3em;
   font-weight: bold;
   color: #94bbe9;
